fixed spacing

--- a/responsive_layout_v3 (1)/CSS/styles.css
+++ b/responsive_layout_v3 (1)/CSS/styles.css
@@ -11,7 +11,6 @@
 
 .primary-content {
   background-color: #dedfe0;
-  padding-right: 10px;
 }
 ~~~~~~~~~~~/* START Styles of nav menu*/~~~~~~~~~~
 
@@ -365,7 +364,7 @@ img {
     display: table;
     clear: both;
   }
-}
+
 @media (min-width: 1024px) {
 
   .container {
@@ -408,21 +407,23 @@ img {
     font-size: 1.3em;
     margin-top: 1em;
     padding-top: 1em;
-    width: 110%;
+    width: auto;
   }
 
   .right-column {
     float: right;
-    width: 55%;
+    width: 54%;
     margin-top: 1em;
   }
 
   .left-column {
     float: left;
-    width: 41%;
+    width: 43%;
   }
 
-
+  .left-column p {
+    padding: 0;
+  }
 
   .container p {
     font-size: 1em;
@@ -442,7 +443,8 @@ img {
         margin: auto 0;
         margin-left: auto;
         margin-right: auto;
-        padding: 0;
+        padding-left: 50px;
+        padding-right: 50px;
       }
 
     .primary-content p {
@@ -452,7 +454,8 @@ img {
 
   .col {
       float: left;
-      width: 31.5%;
+      padding: 10px;
+      width: 32.5%;
     }
     .skills {
     margin-top: 70px;
